Update website config

--- a/website/src/pages/docs/theming/theme.mdx
+++ b/website/src/pages/docs/theming/theme.mdx
@@ -1,17 +1,17 @@
 ---
 title: Default Theme
-description: The default chakra theme tokens
+description: The default Saas UI theme tokens
 ---
 
 The theme object is where you define your application's color palette, type
 scale, font stacks, breakpoints, border radius values, and more.
 
-Theming with Chakra UI is based on the
+Theming with Saas UI is based on the
 [Styled System Theme Specification](https://system-ui.com/theme/)
 
 <ComponentLinks
   github={{ package: 'theme' }}
-  npm={{ package: '@chakra-ui/theme' }}
+  npm={{ package: '@saas-ui/theme' }}
 />
 
 ## Colors
@@ -43,76 +43,74 @@ export default {
 }
 ```
 
-Chakra provides a sensible
-[default theme](https://github.com/chakra-ui/chakra-ui/tree/main/packages/theme)
-inspired by Tailwind CSS, but you can customize it to fit your design.
+The default Saas UI theme is loosely based on the excellent [Chakra UI theme](https://github.com/chakra-ui/chakra-ui/tree/main/packages/theme)
 
 ### Black & White
 
 <ColorWrapper>
-  <ColorPalette color='black' name='Black' />
-  <ColorPalette color='white' name='White' />
+  <ColorPalette color="black" name="Black" />
+  <ColorPalette color="white" name="White" />
   <div />
 </ColorWrapper>
 
 ### Gray
 
 <ColorWrapper>
-  <ColorPalettes color='gray' />
+  <ColorPalettes color="gray" />
 </ColorWrapper>
 
 ### Red
 
 <ColorWrapper>
-  <ColorPalettes color='red' />
+  <ColorPalettes color="red" />
 </ColorWrapper>
 
 ### Orange
 
 <ColorWrapper>
-  <ColorPalettes color='orange' />
+  <ColorPalettes color="orange" />
 </ColorWrapper>
 
 ### Yellow
 
 <ColorWrapper>
-  <ColorPalettes color='yellow' />
+  <ColorPalettes color="yellow" />
 </ColorWrapper>
 
 ### Green
 
 <ColorWrapper>
-  <ColorPalettes color='green' />
+  <ColorPalettes color="green" />
 </ColorWrapper>
 
 ### Teal
 
 <ColorWrapper>
-  <ColorPalettes color='teal' />
+  <ColorPalettes color="teal" />
 </ColorWrapper>
 
 ### Blue
 
 <ColorWrapper>
-  <ColorPalettes color='blue' />
+  <ColorPalettes color="blue" />
 </ColorWrapper>
 
 ### Cyan
 
 <ColorWrapper>
-  <ColorPalettes color='cyan' />
+  <ColorPalettes color="cyan" />
 </ColorWrapper>
 
 ### Purple
 
 <ColorWrapper>
-  <ColorPalettes color='purple' />
+  <ColorPalettes color="purple" />
 </ColorWrapper>
 
 ### Pink
 
 <ColorWrapper>
-  <ColorPalettes color='pink' />
+  <ColorPalettes color="pink" />
 </ColorWrapper>
 
 ## Typography
