--- a/apps/website/src/pages/docs/components/data-display/data-table.mdx
+++ b/apps/website/src/pages/docs/components/data-display/data-table.mdx
@@ -69,7 +69,7 @@ function TableState() {
         label="Select all rows"
       />
       <DataTable
-        ref={tableRef}
+        instanceRef={tableRef}
         columns={dataTable.columns}
         data={dataTable.data}
         isSelectable
