--- a/apps/website/src/pages/docs/core/integrations/clerk.mdx
+++ b/apps/website/src/pages/docs/core/integrations/clerk.mdx
@@ -19,6 +19,12 @@ Supported authentication strategies are:
 - Password
 - Social login (Oauth)
 
+## Installation
+
+```bash
+yarn add @clerk/clerk-react @saas-ui/clerk
+```
+
 ## Import
 
 ```js
@@ -26,12 +32,6 @@ import { ClerkAuthProvider } from '@saas-ui/clerk'
 ```
 
 ## Usage
-
-If you haven't done so already install `@clerk/clerk-react`.
-
-```bash
-yarn add @clerk/clerk-react
-```
 
 ### Setup AuthProvider
 
@@ -62,7 +62,7 @@ function App({ children }) {
 }
 ```
 
-That's it! Check the [Auth documentation](/docs/auth/auth) to see how to add authentication screens to your app.
+That's it! Check the [Auth documentation](/docs/components/auth/auth) to see how to add authentication screens to your app.
 
 ## Props
 
