--- a/apps/website/src/pages/docs/core/integrations/magic.mdx
+++ b/apps/website/src/pages/docs/core/integrations/magic.mdx
@@ -17,10 +17,10 @@ Supported authentication strategies are:
 
 - Magic link
 
-## Import
+## Installation
 
-```js
-import { createAuthService } from '@saas-ui/auth/services/magic'
+```bash
+yarn add magic-sdk @saas-ui/magic
 ```
 
 ## Usage
@@ -36,7 +36,7 @@ yarn add magic-sdk
 ```tsx
 import { Magic } from 'magic-sdk'
 import { AuthProvider } from '@saas-ui/react'
-import { createAuthService } from '@saas-ui/auth/services/magic'
+import { createAuthService } from '@saas-ui/magic'
 
 const magic = new Magic(process.env.MAGIC_API_KEY)
 
@@ -49,4 +49,4 @@ function App({ children }) {
 }
 ```
 
-That's it! Check the [Auth documentation](/docs/auth/auth) to see how to add authentication screens to your app.
+That's it! Check the [Auth documentation](/docs/components/auth/auth) to see how to add authentication screens to your app.
