feat: moved form resolvers into separate package

--- a/apps/website/src/pages/docs/components/forms/auto-form.mdx
+++ b/apps/website/src/pages/docs/components/forms/auto-form.mdx
@@ -124,7 +124,7 @@ Zod currently does not support adding meta data to the schema, to work around th
 you can use the `zodMeta` function to add JSON meta data in the field description.
 
 ```ts
-import { zodForm, zodMeta } from '@saas-ui/forms/zod'
+import { zodForm, zodMeta } from '@saas-ui/form-resolvers/zod'
 ```
 
 ```tsx
