docs: fix pricing link

--- a/apps/website/src/pages/docs/pro/installation/npm.mdx
+++ b/apps/website/src/pages/docs/pro/installation/npm.mdx
@@ -4,7 +4,7 @@ description: Install Saas UI Pro components from a private NPM registry.
 ---
 
 In the next steps we'll show you how to install `@saas-ui/pro` in new or existing projects.
-You'll need a valid license to install Pro, you can order one at [here](/#pricing).
+You'll need a valid license to install Pro, you can order one [here](/pricing).
 
 <Info>
   Before continuing [follow these steps](/docs/core/getting-started) to set up
