--- a/apps/website/src/pages/docs/index.mdx
+++ b/apps/website/src/pages/docs/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: Getting started
+title: Core overview
 description: An advanced component library built on Chakra UI for building high quality SaaS products at speed.
 ---
 
@@ -12,7 +12,7 @@ from fully functional forms with `react-hook-form` to authentication, modals man
 <SimpleGrid columns={[1, null, 2]} spacing={[0, null, 8]}>
   <QuickLink
     icon={<FiZap />}
-    href="/docs/getting-started"
+    href="/docs/core/getting-started"
     width="100%"
     mt="8"
     title="Quickstarts"
