docs: fix DataGrid example code

--- a/apps/website/src/pages/docs/components/advanced-data/data-grid.mdx
+++ b/apps/website/src/pages/docs/components/advanced-data/data-grid.mdx
@@ -436,7 +436,7 @@ const data: ExampleData[] = [{
   },
 }]
 
-<DataGrid<ExampleData> columns={columns} data={data} />
+<DataGrid columns={columns} data={data} />
 ```
 
 ## Props
