fix: sidebar references

--- a/apps/website/src/pages/docs/components/layout/sidebar.mdx
+++ b/apps/website/src/pages/docs/components/layout/sidebar.mdx
@@ -4,8 +4,8 @@ description: Side navigation, commonly used as the primary navigation.
 ---
 
 <ComponentLinks
-  github={{ package: 'saas-ui-sidebar' }}
-  npm={{ package: '@saas-ui/sidebar' }}
+  github={{ package: 'saas-ui-core' }}
+  npm={{ package: '@saas-ui/core' }}
   theme={{ componentName: 'sidebar' }}
   beta
 />
@@ -27,7 +27,7 @@ import {
   SidebarOverlay,
   NavGroup,
   NavItem,
-} from '@saas-ui/sidebar'
+} from '@saas-ui/react'
 ```
 
 ## Usage
