--- a/apps/website/src/pages/docs/components/layout/sidebar.mdx
+++ b/apps/website/src/pages/docs/components/layout/sidebar.mdx
@@ -202,7 +202,7 @@ import {
 
 ### Condensed variant
 
-The condensed variant can be used as a collapsed state on smaller screens, or as the primary navigation in a double sidebar layout, see below.
+The compact variant can be used as a collapsed state on smaller screens, or as the primary navigation in a double sidebar layout, see below.
 NavItem labels will be rendered as tooltips.
 
 Use the `tooltipProps` prop to customize the tooltip.
@@ -210,7 +210,7 @@ Use the `tooltipProps` prop to customize the tooltip.
 ```jsx height=400px overflow=hidden
 <AppShell
   sidebar={
-    <Sidebar variant="condensed" width="64px">
+    <Sidebar variant="compact" width="64px">
       <SidebarToggleButton />
       <SidebarSection alignItems="center">
         <Image
@@ -247,7 +247,7 @@ function ToggleVariant() {
       sidebar={
         <Sidebar
           breakpoints={{ base: false }}
-          variant={isOpen ? 'default' : 'condensed'}
+          variant={isOpen ? 'default' : 'compact'}
           transition="width"
           transitionDuration="normal"
           width={isOpen ? '280px' : '14'}
@@ -294,7 +294,7 @@ You can stack multiple sidebars together to create a double sidebar layout.
 <AppShell
   sidebar={
     <HStack spacing="0" alignItems="stretch">
-      <Sidebar variant="condensed" bg="purple.500" borderWidth="0" spacing="3">
+      <Sidebar variant="compact" bg="purple.500" borderWidth="0" spacing="3">
         <SidebarSection>
           <Image
             src="https://saas-ui.dev/favicons/favicon-96x96.png"
