chore: use react-live-runner for live code examples

--- a/apps/website/src/pages/docs/components/data-display/structured-list.mdx
+++ b/apps/website/src/pages/docs/components/data-display/structured-list.mdx
@@ -36,7 +36,14 @@ import {
 ### Basic
 
 ```jsx center=true
-function Basic() {
+import { Box, Text, Tag } from '@chakra-ui/react'
+import {
+  StructuredList,
+  StructuredListItem,
+  StructuredListCell,
+} from '@saas-ui/react'
+
+export default function Basic() {
   return (
     <Box width="320px">
       <StructuredList>
