--- a/apps/website/src/pages/docs/components/forms/form/theming.mdx
+++ b/apps/website/src/pages/docs/components/forms/form/theming.mdx
@@ -2,3 +2,297 @@
 id: form
 scope: theming
 ---
+
+## Theming
+
+The `Form` component is a multipart component. The styling needs to be
+applied to each part specifically.
+
+> To learn more about styling multipart components, visit the Chakra UI
+> [Component Style](https://chakra-ui.com/docs/styled-system/component-style#styling-multipart-components)
+> page.
+
+### Anatomy
+
+- `container`
+- `inner`
+- `main`
+
+### Default theme
+
+```jsx live=false
+import { inputAnatomy } from '@chakra-ui/anatomy'
+
+import { Input as ChakraInput } from '@chakra-ui/theme/components'
+
+import {
+  createMultiStyleConfigHelpers,
+  defineStyle,
+  defineStyleConfig,
+} from '@chakra-ui/styled-system'
+const { definePartsStyle, defineMultiStyleConfig } =
+  createMultiStyleConfigHelpers(inputAnatomy.keys)
+
+const inputSizes = {
+  sm: definePartsStyle({
+    field: {
+      borderRadius: 'md',
+    },
+    addon: {
+      borderRadius: 'md',
+    },
+  }),
+  md: definePartsStyle({
+    field: {
+      px: 3,
+      h: 9,
+    },
+    addon: {
+      px: 3,
+      h: 9,
+    },
+  }),
+}
+
+const outlineVariant = definePartsStyle((props) => {
+  return {
+    field: {
+      borderColor: 'blackAlpha.300',
+      _dark: {
+        borderColor: 'whiteAlpha.300',
+      },
+      _hover: {
+        borderColor: 'blackAlpha.400',
+        _dark: {
+          borderColor: 'whiteAlpha.400',
+        },
+      },
+    },
+  }
+})
+
+const Input = defineMultiStyleConfig({
+  defaultProps: {
+    /* @ts-expect-error */
+    focusBorderColor: 'primary.500',
+  },
+  variants: {
+    outline: outlineVariant,
+  },
+  sizes: inputSizes,
+})
+
+export const formLabelTheme = {
+  variants: {
+    horizontal: {
+      mb: 0,
+      marginStart: '0.5rem',
+    },
+  },
+}
+
+export const inputTheme = Input
+export const numberInputTheme = Input
+export const pinInputTheme = defineStyleConfig({
+  defaultProps: {
+    /* @ts-expect-error */
+    focusBorderColor: 'primary.500',
+  },
+  variants: {
+    outline: outlineVariant,
+  },
+  sizes: inputSizes,
+})
+export const textareaTheme = defineStyleConfig({
+  defaultProps: {
+    /* @ts-expect-error */
+    focusBorderColor: 'primary.500',
+  },
+  variants: {
+    outline: defineStyle(
+      (props) => inputTheme.variants?.outline(props).field ?? {}
+    ),
+  },
+})
+export const nativeSelectTheme = defineStyleConfig(Input)
+```
+
+### Default theme
+
+```jsx live=false
+import { createMultiStyleConfigHelpers } from '@chakra-ui/styled-system'
+import { formAnatomy } from '@chakra-ui/anatomy'
+
+const { definePartsStyle, defineMultiStyleConfig } =
+  createMultiStyleConfigHelpers(formAnatomy.keys)
+
+const horizontalVariant = definePartsStyle({
+  container: {
+    display: 'flex',
+    alignItems: 'center',
+    flexDirection: 'row-reverse',
+    justifyContent: 'flex-end',
+  },
+})
+
+export const formTheme = defineMultiStyleConfig({
+  variants: {
+    horizontal: horizontalVariant,
+  },
+})
+```
+
+### Theming utilities
+
+- `createMultiStyleConfigHelpers`: a function that returns a set of utilities
+  for creating style configs for a multipart component (`definePartsStyle` and
+  `defineMultiStyleConfig`).
+- `definePartsStyle`: a function used to create multipart style objects.
+- `defineMultiStyleConfig`: a function used to define the style configuration
+  for a multipart component.
+
+```jsx live=false
+import { formAnatomy } from '@saas-ui/theme/anatomy'
+import { createMultiStyleConfigHelpers } from '@chakra-ui/react'
+
+const { definePartsStyle, defineMultiStyleConfig } =
+  createMultiStyleConfigHelpers(formAnatomy.keys)
+```
+
+### Customizing the default theme
+
+```jsx live=false
+import { formAnatomy } from '@saas-ui/theme/anatomy'
+import { createMultiStyleConfigHelpers } from '@chakra-ui/react'
+
+const { definePartsStyle, defineMultiStyleConfig } =
+  createMultiStyleConfigHelpers(formAnatomy.keys)
+
+const baseStyle = definePartsStyle({
+  // define the part you're going to style
+  container: {
+    bg: 'red.200', // change the backgroundColor of the container
+  },
+})
+
+export const formTheme = defineMultiStyleConfig({ baseStyle })
+```
+
+After customizing the app shell theme, we can import it in our theme file and
+add it in the `components` property:
+
+```jsx live=false
+import { extendTheme } from '@chakra-ui/react'
+import { formAnatomy } from './components/form'
+
+export const theme = extendTheme({
+  components: { SuiForm: formAnatomy },
+})
+```
+
+> Saas UI components are prefixed with `Sui` to avoid conflicts with Chakra UI.
+> This is a crucial step to make sure that any changes that we make to the
+> app shell theme are applied.
+
+### Adding a custom size
+
+Let's assume we want to include an extra large app shell icon size. Here's how
+we can do that:
+
+```jsx live=false
+import { formAnatomy } from '@saas-ui/theme/anatomy'
+import { createMultiStyleConfigHelpers, defineStyle } from '@chakra-ui/react'
+
+const { definePartsStyle, defineMultiStyleConfig } =
+  createMultiStyleConfigHelpers(formAnatomy.keys)
+
+const xl = definePartsStyle({
+  container: {
+    height: '1000px'
+  }
+})
+
+const sizes = {
+  xl,
+}
+
+export const app shellTheme = defineMultiStyleConfig({ sizes })
+
+// Now we can use the new `xl` size
+<Form size="xl"> ... </Form>
+```
+
+Every time you're adding anything new to the theme, you'd need to run the CLI
+command to get proper autocomplete in your IDE. You can learn more about the CLI
+tool [here](/docs/styled-system/cli).
+
+### Adding a custom variant
+
+Let's assume we want to include a custom pill variant. Here's how we can do
+that:
+
+```jsx live=false
+import { formAnatomy } from '@saas-ui/theme/anatomy'
+import { createMultiStyleConfigHelpers, defineStyle } from '@chakra-ui/react'
+
+const { definePartsStyle, defineMultiStyleConfig } =
+  createMultiStyleConfigHelpers(formAnatomy.keys)
+
+const custom = definePartsStyle({
+  container: {
+    border: '1px solid',
+    borderColor: 'gray.200',
+    background: 'gray.50',
+    borderRadius: 'full',
+
+    // Let's also provide dark mode alternatives
+    _dark: {
+      borderColor: 'gray.600',
+      background: 'gray.800',
+    },
+  },
+  main: {
+    border: '1px solid',
+    borderColor: 'gray.200',
+    background: 'gray.200',
+    color: 'gray.500',
+
+    _dark: {
+      borderColor: 'gray.600',
+      background: 'gray.600',
+      color: 'gray.400',
+    },
+  },
+})
+
+export const formTheme = defineMultiStyleConfig({
+  variants: { custom },
+})
+
+// Now we can use the new `custom` variant
+<Form variant="custom"> ... </Form>
+```
+
+### Changing the default properties
+
+Let's assume we want to change the default size and variant of every app shell
+in our app. Here's how we can do that:
+
+```jsx live=false
+import { formAnatomy } from '@saas-ui/theme/anatomy'
+import { createMultiStyleConfigHelpers, defineStyle } from '@chakra-ui/react'
+
+const { defineMultiStyleConfig } = createMultiStyleConfigHelpers(
+  formAnatomy.keys,
+)
+
+export const formTheme = defineMultiStyleConfig({
+  defaultProps: {
+    variant: 'custom',
+  },
+})
+
+// This saves you time, instead of manually setting the size and
+// variant every time you use an app shell:
+<Form variant="custom"> ... </Form>
+```
