--- a/apps/website/src/pages/docs/components/layout/app-shell/theming.mdx
+++ b/apps/website/src/pages/docs/components/layout/app-shell/theming.mdx
@@ -18,6 +18,38 @@ applied to each part specifically.
 - `inner`
 - `main`
 
+### Default theme
+
+```jsx live=false
+import { createMultiStyleConfigHelpers } from '@chakra-ui/styled-system'
+import { appShellAnatomy } from '../../anatomy'
+
+const { definePartsStyle, defineMultiStyleConfig } =
+  createMultiStyleConfigHelpers(appShellAnatomy.keys)
+
+const baseStyle = definePartsStyle({
+  container: {},
+  inner: {},
+  main: {},
+})
+
+export const appShellTheme = defineMultiStyleConfig({
+  defaultProps: {
+    variant: 'fullscreen',
+  },
+  variants: {
+    static: {},
+    fullscreen: {
+      container: {
+        position: 'absolute',
+        inset: 0,
+      },
+    },
+  },
+  baseStyle,
+})
+```
+
 ### Theming utilities
 
 - `createMultiStyleConfigHelpers`: a function that returns a set of utilities
