--- a/apps/website/src/pages/docs/components/layout/sidebar/theming.mdx
+++ b/apps/website/src/pages/docs/components/layout/sidebar/theming.mdx
@@ -2,3 +2,252 @@
 id: sidebar
 scope: theming
 ---
+
+## Theming
+
+The `Sidebar` component is a multipart component. The styling needs to be
+applied to each part specifically.
+
+> To learn more about styling multipart components, visit the Chakra UI
+> [Component Style](https://chakra-ui.com/docs/styled-system/component-style#styling-multipart-components)
+> page.
+
+### Anatomy
+
+- `container`
+- `inner`
+- `main`
+
+### Default theme
+
+```jsx live=false
+import { createMultiStyleConfigHelpers } from '@chakra-ui/styled-system'
+import { sidebarAnatomy } from '../../anatomy'
+const { definePartsStyle, defineMultiStyleConfig } =
+  createMultiStyleConfigHelpers(sidebarAnatomy.keys)
+
+const baseStyle = definePartsStyle((props) => {
+  const { colorScheme: c } = props
+
+  return {
+    container: {
+      bg: c ? `${c}.500` : 'white',
+      display: 'flex',
+      flexDirection: 'column',
+      borderRightWidth: '1px',
+      _dark: {
+        bg: c ? `${c}.500` : 'gray.800',
+      },
+    },
+    overlay: {
+      bg: 'blackAlpha.200',
+    },
+  }
+})
+
+const variantDefault = definePartsStyle((props) => {
+  return {
+    container: {
+      width: '280px',
+      maxWidth: ['100vw', '320px'],
+      minWidth: '220px',
+      py: 3,
+      '&[data-collapsible]': {
+        pt: 14,
+      },
+    },
+    section: {
+      px: 3,
+    },
+    toggleWrapper: {
+      h: 8,
+      mb: 4,
+      display: 'none',
+      '[data-collapsible] &': {
+        display: 'block',
+      },
+    },
+  }
+})
+
+const variantCondensed = definePartsStyle((props) => {
+  return {
+    container: {
+      width: '14',
+      py: 3,
+    },
+    section: {
+      px: 3,
+    },
+    toggleWrapper: {
+      display: 'none',
+    },
+  }
+})
+
+export const sidebarTheme = defineMultiStyleConfig({
+  defaultProps: {
+    variant: 'default',
+  },
+  baseStyle,
+  variants: {
+    default: variantDefault,
+    compact: variantCondensed,
+  },
+})
+```
+
+### Theming utilities
+
+- `createMultiStyleConfigHelpers`: a function that returns a set of utilities
+  for creating style configs for a multipart component (`definePartsStyle` and
+  `defineMultiStyleConfig`).
+- `definePartsStyle`: a function used to create multipart style objects.
+- `defineMultiStyleConfig`: a function used to define the style configuration
+  for a multipart component.
+
+```jsx live=false
+import { sidebarAnatomy } from '@saas-ui/theme/anatomy'
+import { createMultiStyleConfigHelpers } from '@chakra-ui/react'
+
+const { definePartsStyle, defineMultiStyleConfig } =
+  createMultiStyleConfigHelpers(sidebarAnatomy.keys)
+```
+
+### Customizing the default theme
+
+```jsx live=false
+import { sidebarAnatomy } from '@saas-ui/theme/anatomy'
+import { createMultiStyleConfigHelpers } from '@chakra-ui/react'
+
+const { definePartsStyle, defineMultiStyleConfig } =
+  createMultiStyleConfigHelpers(sidebarAnatomy.keys)
+
+const baseStyle = definePartsStyle({
+  // define the part you're going to style
+  container: {
+    bg: 'red.200', // change the backgroundColor of the container
+  },
+})
+
+export const sidebarTheme = defineMultiStyleConfig({ baseStyle })
+```
+
+After customizing the app shell theme, we can import it in our theme file and
+add it in the `components` property:
+
+```jsx live=false
+import { extendTheme } from '@chakra-ui/react'
+import { sidebarAnatomy } from './components/sidebar'
+
+export const theme = extendTheme({
+  components: { SuiSidebar: sidebarAnatomy },
+})
+```
+
+> Saas UI components are prefixed with `Sui` to avoid conflicts with Chakra UI.
+> This is a crucial step to make sure that any changes that we make to the
+> app shell theme are applied.
+
+### Adding a custom size
+
+Let's assume we want to include an extra large app shell icon size. Here's how
+we can do that:
+
+```jsx live=false
+import { sidebarAnatomy } from '@saas-ui/theme/anatomy'
+import { createMultiStyleConfigHelpers, defineStyle } from '@chakra-ui/react'
+
+const { definePartsStyle, defineMultiStyleConfig } =
+  createMultiStyleConfigHelpers(sidebarAnatomy.keys)
+
+const xl = definePartsStyle({
+  container: {
+    height: '1000px'
+  }
+})
+
+const sizes = {
+  xl,
+}
+
+export const app shellTheme = defineMultiStyleConfig({ sizes })
+
+// Now we can use the new `xl` size
+<Sidebar size="xl"> ... </Sidebar>
+```
+
+Every time you're adding anything new to the theme, you'd need to run the CLI
+command to get proper autocomplete in your IDE. You can learn more about the CLI
+tool [here](/docs/styled-system/cli).
+
+### Adding a custom variant
+
+Let's assume we want to include a custom pill variant. Here's how we can do
+that:
+
+```jsx live=false
+import { sidebarAnatomy } from '@saas-ui/theme/anatomy'
+import { createMultiStyleConfigHelpers, defineStyle } from '@chakra-ui/react'
+
+const { definePartsStyle, defineMultiStyleConfig } =
+  createMultiStyleConfigHelpers(sidebarAnatomy.keys)
+
+const custom = definePartsStyle({
+  container: {
+    border: '1px solid',
+    borderColor: 'gray.200',
+    background: 'gray.50',
+    borderRadius: 'full',
+
+    // Let's also provide dark mode alternatives
+    _dark: {
+      borderColor: 'gray.600',
+      background: 'gray.800',
+    },
+  },
+  main: {
+    border: '1px solid',
+    borderColor: 'gray.200',
+    background: 'gray.200',
+    color: 'gray.500',
+
+    _dark: {
+      borderColor: 'gray.600',
+      background: 'gray.600',
+      color: 'gray.400',
+    },
+  },
+})
+
+export const sidebarTheme = defineMultiStyleConfig({
+  variants: { custom },
+})
+
+// Now we can use the new `custom` variant
+<Sidebar variant="custom"> ... </Sidebar>
+```
+
+### Changing the default properties
+
+Let's assume we want to change the default size and variant of every app shell
+in our app. Here's how we can do that:
+
+```jsx live=false
+import { sidebarAnatomy } from '@saas-ui/theme/anatomy'
+import { createMultiStyleConfigHelpers, defineStyle } from '@chakra-ui/react'
+
+const { defineMultiStyleConfig } = createMultiStyleConfigHelpers(
+  sidebarAnatomy.keys,
+)
+
+export const sidebarTheme = defineMultiStyleConfig({
+  defaultProps: {
+    variant: 'custom',
+  },
+})
+
+// This saves you time, instead of manually setting the size and
+// variant every time you use an app shell:
+<Sidebar variant="custom"> ... </Sidebar>
+```
